5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4135/executions/1585_1015.log
== TEST (2019-03-21 23:53:54) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int (input("Digite um numero:"))
b = int (input("Digite um numero:"))
c = int (input("Digite umnumero:"))
print (min (a,b,c))
print (max (a,b,c))
-- OUTPUT:
-2
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 23:57:49) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int (input("Digite um numero:"))
b = int (input("Digite um numero:"))
c = int (input("Digite umnumero:"))
print (min (a,b,c))
print ((a+b+c)-min - max)
print (max (a,b,c))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print ((a+b+c)-min - max)
TypeError: unsupported operand type(s) for -: 'int' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 00:02:03) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int (input("Digite um numero:"))
b = int (input("Digite um numero:"))
c = int (input("Digite umnumero:"))
(min (a,b,c)
(max (a,b,c)
-- ERROR:
File "XXXX", line 9
    
                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 00:02:17) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int (input("Digite um numero:"))
b = int (input("Digite um numero:"))
c = int (input("Digite umnumero:"))
min (a,b,c)
max (a,b,c)
-- ERROR:
File "XXXX", line 9
    
                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 00:03:30) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int (input("Digite um numero:"))
b = int (input("Digite um numero:"))
c = int (input("Digite umnumero:"))
min (a,b,c)
max (a,b,c)
print (min)
print ((a+b+c)-(min)-(max))
print (max)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print ((a+b+c)-(min)-(max))
TypeError: unsupported operand type(s) for -: 'int' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 00:04:22) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int (input("Digite um numero:"))
b = int (input("Digite um numero:"))
c = int (input("Digite umnumero:"))
min (a,b,c)
max (a,b,c)
print (min)
print ((a+b+c)-(min)-(max))
print (max)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print ((a+b+c)-(min)-(max))
TypeError: unsupported operand type(s) for -: 'int' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 00:05:44) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int (input("Digite um numero:"))
b = int (input("Digite um numero:"))
c = int (input("Digite umnumero:"))
min (a,b,c)
max (a,b,c)
print (min)
print (((a+b+c)-(min))-(max))
print (max)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print (((a+b+c)-(min))-(max))
TypeError: unsupported operand type(s) for -: 'int' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 00:05:56) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int (input("Digite um numero:"))
b = int (input("Digite um numero:"))
c = int (input("Digite umnumero:"))
min (a,b,c)
max (a,b,c)
print (min)
print (((a+b+c)-(min))-(max))
print (max)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print (((a+b+c)-(min))-(max))
TypeError: unsupported operand type(s) for -: 'int' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 00:09:26) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int (input("Digite um numero:"))
b = int (input("Digite um numero:"))
c = int (input("Digite umnumero:"))
mini = min (a,b,c)
maxi = max (a,b,c)
print (mini)
print ((a+b+c)-(mini)-(maxi))
print (maxi)
-- OUTPUT:
-2
0
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 00:09:41) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int (input("Digite um numero:"))
b = int (input("Digite um numero:"))
c = int (input("Digite umnumero:"))
mini = min (a,b,c)
maxi = max (a,b,c)
print (mini)
print ((a+b+c)-(mini)-(maxi))
print (maxi)
-- EXECUTION TIME:
0.205777
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
0
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
